--- a/static/js/test.html
+++ b/static/js/test.html
@@ -1,7 +1,7 @@
 <img id="img">
 <iframe id="iframe"></iframe>
 <script>
-function search(query) {
+async function search(query) {
     return new Promise((resolve) => {
         const iframe = document.getElementById("iframe");
         iframe.src = `http://localhost:8000/search?query=${query}`;
