--- a/static/js/test.html
+++ b/static/js/test.html
@@ -24,7 +24,7 @@ async function search(query) {
 
 async function exploit() {
     let chars = "0123456789abcdef}";
-    let secret = "DH{";
+    let secret = "DH{22d1445a";
     const img = document.getElementById("img");
 
     // while 루프를 비동기로 처리
